--- a/index.html
+++ b/index.html
@@ -1,80 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Personal Portfolio #1 | AsmrProg</title>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <nav>
-        <div class="nav-logo">
-            <a href="#">
-                <img src="images/logo.png">
-            </a>
-        </div>
+      <div class="nav-logo">
+        <a href="#">
+          <img src="images/logo.png" />
+        </a>
+      </div>
 
-        <ul class="nav-links">
-            <li class="link"><a href="#">Présentation</a></li>
-            <li id="link1" class="link"><a href="#">BTS SIO</a></li>
-            <li id="link2" class="link"><a href="#">PPE</a></li>
-            <li id="link3" class="link"><a href="#">Thème abordés</a></li>
-            <li id="link4" class="link"><a href="#">Gestion Patrimoine Infos</a></li>
-            <li id="link5" class="link"><a href="#">Compétence</a></li>
-        </ul>
-        <button class="btn">Hire Me</button>
+      <ul class="nav-links">
+        <li class="link"><a href="#">Présentation</a></li>
+        <li id="link1" class="link"><a href="#">BTS SIO</a></li>
+        <li id="link2" class="link"><a href="#">PPE</a></li>
+        <li id="link3" class="link"><a href="#">Thème abordés</a></li>
+        <li id="link4" class="link">
+          <a href="#">Gestion Patrimoine Infos</a>
+        </li>
+        <li id="link5" class="link"><a href="#">Compétence</a></li>
+      </ul>
+      <button class="btn">Hire Me</button>
     </nav>
 
     <header class="container">
-        <div class="content">
-            <span class="blur"></span>
-            <span class="blur"></span>
-            <h4>Présentation</h4>
-            <H1>Bonjour, je suis <span>Antoine</span> </H1>
-            <p>je suis un élève de BTS SIO. Après une 1ère année en alterance faites chez EOS-france je suis ma seconde
-                et dernière année chez IOT start. Je viens d'un bac général avec
-                spécialisation en mathématique et nsi ( Numérique et sciences informatiques ) avec une option en math
-                experte. Je me suis passionné depuis toujours pour informatique.
-                Tous cela a commencé dés la 3 ème avec un stage de découverte dans la société Thalia qui m'a permis de
-                découvrir plus amplement le métier de développer qui m'a permis de savoir vers quoi m'orienter par la
-                suite.
-            </p>
-            <button class="btn">Get Started</button>
-        </div>
-        <div class="image">
-            <img src="images/cv.jpg">
-        </div>
+      <div class="content">
+        <span class="blur"></span>
+        <span class="blur"></span>
+        <h4>Présentation</h4>
+        <h1>Bonjour, je suis <span>Antoine</span></h1>
+        <p>
+          je suis un élève de BTS SIO. Après une 1ère année en alterance faites
+          chez EOS-france je suis ma seconde et dernière année chez IOT start.
+          Je viens d'un bac général avec spécialisation en mathématique et nsi (
+          Numérique et sciences informatiques ) avec une option en math experte.
+          Je me suis passionné depuis toujours pour informatique. Tous cela a
+          commencé dés la 3 ème avec un stage de découverte dans la société
+          Thalia qui m'a permis de découvrir plus amplement le métier de
+          développer qui m'a permis de savoir vers quoi m'orienter par la suite.
+        </p>
+        <button class="btn">Get Started</button>
+      </div>
+      <div class="image">
+        <img src="images/cv.jpg" />
+      </div>
     </header>
 
     <section class="container">
-        <h2 class="header">BTS SIO</h2>
-        <div class="info">
-            <div class="card">
-                <h4>Le BTS SIO option SLAM, c'est quoi ?</h4>
-                <p>
-                    Le BTS SIO SLAM est un diplôme dans le domaine informatique. Ce brevet de technicien supérieur se
-                    prépare en deux ans après le bac. La formation a pour thème principal se penche sur les services
-                    informatiques aux organisations et, plus précisément, sur l'option SLAM (solutions logicielles et
-                    applications métiers). C'est l'une des deux options possibles en BTS SIO avec SISR, solutions
-                    d'infrastructure, systèmes et réseaux. Cette option m'a interressé tout d'abord parce qu'elle me
-                    permettais de faire une préparation intégré à l'ESNA.
-                    Elle me permettais également d'avoir une option de cybersécurité et de ne pas trop faire de réseaux
-                    qui est une de mes faiblesses.
-                </p>
-            </div>
+      <h2 class="header">BTS SIO</h2>
+      <div class="info">
+        <div class="card">
+          <h4>Le BTS SIO option SLAM, c'est quoi ?</h4>
+          <p>
+            Le BTS SIO SLAM est un diplôme dans le domaine informatique. Ce
+            brevet de technicien supérieur se prépare en deux ans après le bac.
+            La formation a pour thème principal se penche sur les services
+            informatiques aux organisations et, plus précisément, sur l'option
+            SLAM (solutions logicielles et applications métiers). C'est l'une
+            des deux options possibles en BTS SIO avec SISR, solutions
+            d'infrastructure, systèmes et réseaux. Cette option m'a interressé
+            tout d'abord parce qu'elle me permettais de faire une préparation
+            intégré à l'ESNA. Elle me permettais également d'avoir une option de
+            cybersécurité et de ne pas trop faire de réseaux qui est une de mes
+            faiblesses.
+          </p>
         </div>
+      </div>
     </section>
 
     <section class="container">
-        <h2 class="header">Thèmes abordés</h2>
-        <p class="sub-header">
-            voici ci-joint les projets que nous avons réalisés en école afin de valider nos compétences :
+      <h2 class="header">Thèmes abordés</h2>
+      <p class="sub-header">
+        voici ci-joint les projets que nous avons réalisés en école afin de
+        valider nos compétences :
 
-            <!-- 
+        <!-- 
         <ul>
             <li>Projet concernant GLPI</li>
             <li>Gestion de parc informatique</li>
@@ -95,158 +104,193 @@
             <li>Travail sur multillidae ( lab de recherche de faille )
                 présentation de CVE</li>
         </ul> -->
-        </p>
-        <div class="pricing">
-            <div class="card">
-                <div class="content">
-                    <h4> E4 :</h4>
-                    <h3></h3>
-                    <p>
-                        <i class="ri-checkbox-circle-line"></i>
-                        Projet concernant GLPI
-                    </p>
-                    <p>
-                        <i class="ri-checkbox-circle-line"></i>
-                        Gestion de parc informatique
-                    </p>
-                    <p>
-                        <i class="ri-checkbox-circle-line"></i>
-                        traitement de cas de tickets d'incidents
-                    </p>
-                    <p>
-                        <i class="ri-checkbox-circle-line"></i>
-                        Installation d'Active Directory
-                    </p>
-                    <p>
-                        <i class="ri-checkbox-circle-line"></i>
-                        Préparation de machine utilisateur sous windows 10
-                    </p>
-                </div>
-                <a href="details.html">
-                    <button class="btn">Voir Tp Associé(s)</button>
-                </a>
-            </div>
-            <div class="card">
-                <div class="content">
-                    <h4>E5 :</h4>
-                    <h3></h3>
-                    <p>
-                        <i class="ri-checkbox-circle-line"></i>
-                        travail en mode projet
-                    </p>
-                    <p>
-                        <i class="ri-checkbox-circle-line"></i>
-                        mise en place d'interface web
-                    </p>
-                    <p>
-                        <i class="ri-checkbox-circle-line"></i>
-                        travail sur des bases de données
-                    </p>
-                    <p>
-                        <i class="ri-checkbox-circle-line"></i>
-                        liaison back/front avec php
-                    </p>
-
-                </div>
-                <button class="btn">Voir Tp Associé(s)</button>
-            </div>
-            <div class="card">
-                <div class="content">
-                    <h4>E6 :</h4>
-                    <h3></h3>
-                    <p>
-                        <i class="ri-checkbox-circle-line"></i>
-                        Travail sur multillidae ( lab de recherche de faille )
-                        présentation de CVE
-                    </p>
-                </div>
-                <button class="btn">Voir Tp Associé(s)</button>
-            </div>
+      </p>
+      <div class="pricing">
+        <div class="card">
+          <div class="content">
+            <h4>E4 :</h4>
+            <h3></h3>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              Projet concernant GLPI
+            </p>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              Gestion de parc informatique
+            </p>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              traitement de cas de tickets d'incidents
+            </p>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              Installation d'Active Directory
+            </p>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              Préparation de machine utilisateur sous windows 10
+            </p>
+          </div>
+          <a href="details.html">
+            <button class="btn">Voir Tp Associé(s)</button>
+          </a>
         </div>
+        <div class="card">
+          <div class="content">
+            <h4>E5 :</h4>
+            <h3></h3>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              travail en mode projet
+            </p>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              mise en place d'interface web
+            </p>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              travail sur des bases de données
+            </p>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              liaison back/front avec php
+            </p>
+          </div>
+          <button class="btn">Voir Tp Associé(s)</button>
+        </div>
+        <div class="card">
+          <div class="content">
+            <h4>E6 :</h4>
+            <h3></h3>
+            <p>
+              <i class="ri-checkbox-circle-line"></i>
+              Travail sur multillidae ( lab de recherche de faille )
+              présentation de CVE
+            </p>
+          </div>
+          <button class="btn">Voir Tp Associé(s)</button>
+        </div>
+      </div>
     </section>
-
 
     <section class="container">
-        <h2 class="header">Compétence</h2>
-        <div class="info">
-            <div class="card">
-                <span><i class="ri-money-dollar-box-line"></i></span>
-                <h4>Free Tutorials</h4>
-                <p>
-                    My tutorials in my channel "AsmrProg" are free and you don't need to pay anything.
-                </p>
-                <a href="#">Join Now <i class="ri-arrow-right-line"></i></a>
-            </div>
-            <div class="card">
-                <span><i class="ri-bug-line"></i></span>
-                <h4>Fix Your Bugs</h4>
-                <p>
-                    You have any problem in your codes? Tell me, i will help you fix it.
-                </p>
-                <a href="#">Join Now <i class="ri-arrow-right-line"></i></a>
-            </div>
-            <div class="card">
-                <span><i class="ri-history-line"></i></span>
-                <h4>On Time Videos</h4>
-                <p>
-                    We have video each 4 days, So check channel every 4 days to watch it!
-                </p>
-                <a href="#">Join Now <i class="ri-arrow-right-line"></i></a>
-            </div>
-            <div class="card">
-                <span><i class="ri-shake-hands-line"></i></span>
-                <h4>Cooperation</h4>
-                <p>
-                    You want we worrk together? Write email to us, we will read it.
-                </p>
-                <a href="#">Join Now <i class="ri-arrow-right-line"></i></a>
-            </div>
+      <h2 class="header">Compétence</h2>
+      <div class="info">
+        <div class="card">
+          <embed
+            src="./compte_rendu/Tableau-de-synthese-Epreuve-E4-BTS-SIO-GONNET-Antoine - Tableau de synthèse Épreuve E4 (2).pdf"
+            type="application/pdf"
+            width="100%"
+            height="600px"
+          />
         </div>
+      </div>
     </section>
 
+    <section class="container">
+      <h2 class="header">Veille</h2>
+      <div class="info">
+        <div class="card">
+          <h4>Le BTS SIO option SLAM, c'est quoi ?</h4>
+          <p>
+            <div class="card-veille">
+            <u><strong>Analyse et Synthèse </strong></u>: Pour analyser les données d'une veille de
+            cybersécurité en 30 minutes par jour,  </br>
+            </div>
+            <div class="card-veille">
+            <u><strong> Définition des sources
+            d'information </strong></u>: Identifiez les sources d'information les plus
+            fiables et pertinentes pour votre domaine de cybersécurité. Cela
+            peut inclure des sites web spécialisés, des blogs, des forums, des
+            publications académiques, des rapports de sécurité, des bulletins
+            d'alerte, des comptes de réseaux sociaux de professionnels de la
+            sécurité, etc.  </br>
+        </div>
+            <div class="card-veille">
+             <u><strong>Automatisation de la collecte d'informations </strong></u>:
+            Utilisez des outils d'agrégation d'informations et des flux RSS pour
+            automatiser la collecte des nouvelles et des mises à jour provenant
+            de vos sources sélectionnées. Cela vous permettra de gagner du temps
+            en rassemblant toutes les informations pertinentes en un seul
+            endroit.  </br>
+        </div>
+            <div class="card-veille">
+            <u> <strong>Filtrage des données </strong></u>: Mettez en place des filtres
+            pour trier les informations en fonction de leur pertinence et de
+            leur importance. Vous pouvez utiliser des mots-clés, des tags ou des
+            catégories pour organiser et filtrer les données en fonction de vos
+            intérêts et de vos priorités. </br>
+             Analyse rapide : Consacrez
+            quelques minutes chaque jour à parcourir les titres et les résumés
+            des articles et des rapports. Identifiez rapidement les sujets les
+            plus importants et les tendances émergentes. </br>
+        </div>
+            <div class="card-veille">
+             <u><strong>Approfondissement
+            sélectif</strong></u> :
+             Sélectionnez quelques articles ou rapports clés chaque
+            jour pour une analyse plus approfondie. Concentrez-vous sur les
+            informations qui sont les plus pertinentes pour votre domaine
+            d'expertise ou pour les défis spécifiques auxquels votre
+            organisation est confrontée. </br>
+        </div>
+            <div class="card-veille">
+            <u><strong>Synthèse des informations </strong></u>:
+            Résumez les principaux points et les conclusions importantes des
+            articles ou rapports que vous avez analysés. Créez des notes ou des
+            rapports succincts pour partager les informations pertinentes avec
+            vos collègues ou votre équipe de sécurité.</br>
+        </div>
+            <div class="card-veille">
+            <u><strong>Mise à jour des
+            connaissances </strong></u>: Profitez de cette analyse quotidienne pour
+            enrichir vos connaissances et rester à jour sur les dernières
+            tendances, les techniques d'attaque, les vulnérabilités découvertes
+            et les meilleures pratiques en matière de cybersécurité.
+        </div>
+          </p>
+        </div>
+      </div>
+    </section>
 
     <footer class="container">
-        <span class="blur"></span>
-        <span class="blur"></span>
-        <div class="column">
-            <div class="logo">
-                <img src="images/logo.png">
-            </div>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </p>
-            <div class="socials">
-                <a href="#"><i class="ri-youtube-line"></i></a>
-                <a href="#"><i class="ri-instagram-line"></i></a>
-                <a href="#"><i class="ri-twitter-line"></i></a>
-            </div>
+      <span class="blur"></span>
+      <span class="blur"></span>
+      <div class="column">
+        <div class="logo">
+          <img src="images/logo.png" />
         </div>
-        <div class="column">
-            <h4>Company</h4>
-            <a href="#">Business</a>
-            <a href="#">Partnership</a>
-            <a href="#">Network</a>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <div class="socials">
+          <a href="#"><i class="ri-youtube-line"></i></a>
+          <a href="#"><i class="ri-instagram-line"></i></a>
+          <a href="#"><i class="ri-twitter-line"></i></a>
         </div>
-        <div class="column">
-            <h4>About Us</h4>
-            <a href="#">Blogs</a>
-            <a href="#">Channels</a>
-            <a href="#">Sponsors</a>
-        </div>
-        <div class="column">
-            <h4>Contact</h4>
-            <a href="#">Contact Us</a>
-            <a href="#">Privicy Policy</a>
-            <a href="#">Terms & Conditions</a>
-        </div>
+      </div>
+      <div class="column">
+        <h4>Company</h4>
+        <a href="#">Business</a>
+        <a href="#">Partnership</a>
+        <a href="#">Network</a>
+      </div>
+      <div class="column">
+        <h4>About Us</h4>
+        <a href="#">Blogs</a>
+        <a href="#">Channels</a>
+        <a href="#">Sponsors</a>
+      </div>
+      <div class="column">
+        <h4>Contact</h4>
+        <a href="#">Contact Us</a>
+        <a href="#">Privicy Policy</a>
+        <a href="#">Terms & Conditions</a>
+      </div>
     </footer>
 
     <div class="copyright">
-        Copyright © 2023 AsmrProg Channel. All Rights Reserved.
+      Copyright © 2023 AsmrProg Channel. All Rights Reserved.
     </div>
 
-
     <script src="script.js"></script>
-</body>
-
+  </body>
 </html>
