--- a/details.html
+++ b/details.html
@@ -1,5 +1,21 @@
-<embed src="./compte_rendu/Compte_rendu_Dev.pdf" type="application/pdf" width="100%" height="600px" />
-<embed src="./compte_rendu/Compte_rendu_dev_2.pdf" type="application/pdf" width="100%" height="600px" />
-<embed src="./compte_rendu/Compte_rendu_tp_10-11.pdf" type="application/pdf" width="100%" height="600px" />
-<embed src="./compte_rendu/Compte_rendu_tp_9.pdf" type="application/pdf" width="100%" height="600px" />
-<embed src="./compte_rendu/Recap_Tp_world_press.pdf" type="application/pdf" width="100%" height="600px" />
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css">
+    <link rel="stylesheet" href="style.css">
+    <title>Tps E4</title>
+</head>
+
+<body>
+    <embed src="./compte_rendu/Compte_rendu_Dev.pdf" type="application/pdf" width="100%" height="600px" />
+    <embed src="./compte_rendu/Compte_rendu_dev_2.pdf" type="application/pdf" width="100%" height="600px" />
+    <embed src="./compte_rendu/Compte_rendu_tp_10-11.pdf" type="application/pdf" width="100%" height="600px" />
+    <embed src="./compte_rendu/Compte_rendu_tp_9.pdf" type="application/pdf" width="100%" height="600px" />
+    <embed src="./compte_rendu/Recap_Tp_world_press.pdf" type="application/pdf" width="100%" height="600px" />
+
+</body>
+
+</html>
