--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Personal Portfolio #1 | AsmrProg</title>
+    <title>Portfolio Antoine Gonnet</title>
 </head>
 
 <body>
@@ -22,9 +22,10 @@
             <li class="link"><a href="#">Présentation</a></li>
             <li id="link1" class="link"><a href="#">BTS SIO</a></li>
             <li id="link2" class="link"><a href="#">PPE</a></li>
-            <li id="link3" class="link"><a href="#">Thème abordés</a></li>
-            <li id="link4" class="link"><a href="#">Gestion Patrimoine Infos</a></li>
+            <li id="link3" class="link"><a href="#"></a></li>
+            <li id="link4" class="link"><a href="#">Thème abordés</a></li>
             <li id="link5" class="link"><a href="#">Compétence</a></li>
+            <li id="link6" class="link"><a href="#">Veille Technologique</a></li>
         </ul>
         <button class="btn">Hire Me</button>
     </nav>
@@ -148,7 +149,9 @@
                     </p>
 
                 </div>
-                <button class="btn">Voir Tp Associé(s)</button>
+                <a href="details_E5.html">
+                    <button class="btn">Voir Tp Associé(s)</button>
+                </a>
             </div>
             <div class="card">
                 <div class="content">
@@ -160,7 +163,9 @@
                         présentation de CVE
                     </p>
                 </div>
-                <button class="btn">Voir Tp Associé(s)</button>
+                <a href="details_cyber.html">
+                    <button class="btn">Voir Tp Associé(s)</button>
+                </a>
             </div>
         </div>
     </section>
@@ -203,47 +208,6 @@
             </div>
         </div>
     </section>
-
-
-    <footer class="container">
-        <span class="blur"></span>
-        <span class="blur"></span>
-        <div class="column">
-            <div class="logo">
-                <img src="images/logo.png">
-            </div>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </p>
-            <div class="socials">
-                <a href="#"><i class="ri-youtube-line"></i></a>
-                <a href="#"><i class="ri-instagram-line"></i></a>
-                <a href="#"><i class="ri-twitter-line"></i></a>
-            </div>
-        </div>
-        <div class="column">
-            <h4>Company</h4>
-            <a href="#">Business</a>
-            <a href="#">Partnership</a>
-            <a href="#">Network</a>
-        </div>
-        <div class="column">
-            <h4>About Us</h4>
-            <a href="#">Blogs</a>
-            <a href="#">Channels</a>
-            <a href="#">Sponsors</a>
-        </div>
-        <div class="column">
-            <h4>Contact</h4>
-            <a href="#">Contact Us</a>
-            <a href="#">Privicy Policy</a>
-            <a href="#">Terms & Conditions</a>
-        </div>
-    </footer>
-
-    <div class="copyright">
-        Copyright © 2023 AsmrProg Channel. All Rights Reserved.
-    </div>
 
 
     <script src="script.js"></script>
