--- a/index.html
+++ b/index.html
@@ -285,6 +285,11 @@
         <a href="#">Privicy Policy</a>
         <a href="#">Terms & Conditions</a>
       </div>
+      <div class="column">
+        <h4>Projet</h4>
+        <a href="#">Projet école : https://github.com/Networkion/Website/tree/site-no-docker-reparer </a>
+        <a href="#">Projet pro : https://github.com/AntoineGnt-hub/ProjetBTS</a>
+      </div>
     </footer>
 
     <div class="copyright">
